<package format="2">
  <name>ipa_arm_planning_moveit_benchmark</name>
  <version>0.0.0</version>
  <description> tool for motion planning benchmark </description>

  <maintainer email="bbrito@todo.todo">bbrito</maintainer>

  <license>IPA</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>boost</depend>
  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>trac_ik</exec_depend>

</package>
